tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__Tier7ControlComp-AAAAAAAAAAAAAAAAAAAKjg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2702,
  "prerequisites": [
    2641
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Each rocket needs a Control Computer, appropriate to the tier of the rocket.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 7 Control Computer",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2641
  ],
  "rewards": [],
  "tasks": []
}
