tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__stevemothership-FMul7onaSFmWwPZRUSR3FA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 9933331476569683732,
  "prerequisites": [
    13689045632609175760
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This block can be used to configure the Mothership's name and icon, who is allowed to land on it and who is allowed to access the Navigation Console and the Thrusters.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "steve@mothership:~$",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13689045632609175760
  ],
  "rewards": [],
  "tasks": []
}
